Documentation cleanup: Remove all emojis and informal language
- Removed all remaining emojis from EXECUTIVE_BRIEF.md and STRATEGIC_POLICY_FRAMEWORK.md
- Replaced informal/casual language with professional policy terminology
- Fixed formatting issues caused by emoji removal
- Standardized numerical values and references
- Updated FORMALIZATION_SUMMARY.md to reflect professional standards
- Modified .gitignore to include strategic_analysis outputs while excluding other analysis outputs
- All documentation now meets academic and government policy standards

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,13 @@ __pycache__/
 Thumbs.db
 
 # Data and outputs
-analysis_outputs/
+analysis_outputs/dashboard/
+analysis_outputs/enrolment/
+analysis_outputs/demographic/
+analysis_outputs/biometric/
+analysis_outputs/insights/
+# Keep strategic_analysis outputs for hackathon submission
+!analysis_outputs/strategic_analysis/
 api_data_aadhar_*/**/*.csv
 *.zip
 
